created layout.pug for template inheritance

--- a/views/auth.pug
+++ b/views/auth.pug
@@ -1,26 +1,13 @@
-doctype html
-head
-  title Ac-News Authentication
-  link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css')
-  style
-    include ../static/style.css
-    include ../static/output.css
-  script
-    include ../static/auth.js
+extends layout.pug
 
-  body
-    nav#navbar
-      ul#authUl
-        li
-          p#logo Ac-News
-        li
-          a.active(href='/') Home
-        li
-          a(href='/protected_page') Upload News
-        li
-          a(href='#contact') Contact
-        li(class="")
-          a(href='/logout') Log In/Out
+block append styles
+  link(rel="stylesheet" href="../static/style.css")
+  link(rel="stylesheet" href="../static/output.css")
+
+block scripts
+  script(src='../static/auth.js')
+
+block content
 
   div.container
     form(action='/authdata' method= 'POST' id="exist")
