--- a/views/index.pug
+++ b/views/index.pug
@@ -1,26 +1,13 @@
-doctype html
-head
-  title Ac-News
-  style
-    include ../static/style.css
-    include ../static/main.css
-  script
-    include ../static/client.js
+extends layout.pug
 
-  body
-    nav#navbar
-      ul
-        li
-         p#logo Ac-News
-        li
-          a.active(href='#home') Home
-        li
-          a(href='/protected_page') Upload News
-        li
-          a(href='#contact') Contact
-        li.nav-right
-          a(href='/logout') Log In/Out
+block append styles
+  link(rel="stylesheet" href="../static/style.css")
+  link(rel="stylesheet" href="../static/main.css")
 
+block scripts
+  script(src='../static/client.js')
+
+block content
   section#sec1
     ul#ul1
       each val in doc
