--- a/static/form.css
+++ b/static/form.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   background-color: rgb(207, 219, 237)
 }
 
@@ -10,10 +10,7 @@ body {
   margin: 150px;
 }
 
-#logo{
-  font-size: x-large;
-  color: white;
-}
+
 #submit {
   font-size: inherit;
   border-radius: 10px;
@@ -65,4 +62,4 @@ textarea:hover {
 textarea:focus {
   outline: 2px solid rgb(80, 158, 227);
   box-shadow: 0px 0px 10px 7px rgb(72, 138, 241);
-}
+} */
