--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer components {
+  .custom-shadow {
+    box-shadow: 0px 0px 7px 7px rgb(59, 117, 234);
+  }
+}
