--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-html {
+/* html {
   background-color: rgb(207, 219, 237);
 }
 
@@ -6,10 +6,6 @@ body {
   background-color: rgb(207, 219, 237);
 }
 
-#logo{
-  font-size: x-large;
-  color: white;
-}
 
 section {
   display: flex;
@@ -63,7 +59,7 @@ nav#navbar ul {
   margin-top: 115px;
 }
 
-.container {
+.containers {
   font-size: x-large;
   display: flex;
   flex-direction: column;
@@ -75,7 +71,7 @@ nav#navbar ul {
   margin-top: 60px;
 }
 
-.container:hover {
+.containers:hover {
   border: none;
   box-shadow: 0px 0px 17px 17px rgb(152, 171, 215);
 }
@@ -177,4 +173,4 @@ input[type=password]:focus {
 #new h2 {
   margin-top: 75px;
   text-align: center;
-}
+} */
