--- a/views/auth.pug
+++ b/views/auth.pug
@@ -8,39 +8,31 @@ block scripts
   script(src='../static/auth.js')
 
 block content
+  div(class="w-fit mt-12 pt-12  mx-auto text-2xl flex flex-row ")
+    form(class="bg-red-100 shadow-md px-8  mr-8 pt-6 pb-8 mb-4 rounded-3xl bg-gradient-to-r from-cyan-200 to-blue-400" onSubmit="getLoginData(this, event);" id="exist")
+      h1(class="text-center text-gray-700 font-bold") Existing User
+      div(class="mb-4")
+        label(class="block text-gray-700 text-lg font-bold mb-2" for="username") Username
+        input(class=" hover:custom-shadow shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline " id="exist_username" type="text" placeholder="Username" required)
 
-  div.container
-    form(action='/authdata' method= 'POST' id="exist")
-      table#table
-        tr
-          h2 User Login
-          td.tdLabel
-            label.label Enter Username :
-          td#title
-            input(type='text' name='username' value=''  required)
-        tr
-          td.tdLabel
-            label.label Enter Password :
-          td#category
-            input(type='password' name='password' value=''  required)
-        tr
-          td(colspan='2')
-            button#logInCreate(type='submit' onclick="getLoginData(this);") Log In
+      div(class="mb-6")
+        label(class="block text-gray-700 text-lg font-bold mb-2" for="password") Password
+        input(class="shadow  hover:custom-shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="exist_password" type="password" placeholder="******************" required)
+      div(class="flex items-center justify-between")
+        button(class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit") Log In
 
-    form(action='/authdata2' method= 'POST' id="new")
-      table#table2
-        tr
-          h2 Create Account
-          td.tdLabel
-            label.label Enter Username :
-          td#title
-            input(type='text' name='username' value=''  required)
-        tr
-          td.tdLabel
-            label.label Enter Password :
-          td#category
-            input(type='password' name='password' value=''  required)
-        tr
-          td(colspan='2' style="padding-bottom: 75px;")
-            button#logInCreate(type='submit' onclick="getCreateData(this);"  ) Create Account
+        a(class="inline-block align-baseline font-bold text-sm text-white hover:text-blue-800" href="#") Forgot Password?
+
+    form(class="shadow-md px-8 pt-6 pb-8 mb-4 rounded-3xl bg-gradient-to-r from-cyan-200 to-blue-400" onSubmit="getCreateData(this, event);" id="new")
+      h1(class="text-center text-gray-700 font-bold") New User
+      div(class="mb-4")
+        label(class="block text-gray-700 text-lg font-bold mb-2" for="username") Username
+        input(class=" hover:custom-shadow shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="new_username" type="text" placeholder="Username" required)
+
+      div(class="mb-6")
+        label(class="block text-gray-700 text-lg font-bold mb-2" for="password") Password
+        input(class=" hover:custom-shadow shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="new_password" type="password" placeholder="******************" required)
+      div(class="flex items-center justify-between")
+        button(class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit" ) Sign Up
+
 
