--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,19 +3,56 @@ head
   title Ac-News
   block scripts
   block styles
+  link(rel="stylesheet" href="../static/output.css")
 
-  body
-    nav#navbar
-      ul
-        li
-          p#logo Ac-News
-        li
-          a.active(href='/') Home
-        li
-          a(href='/protected_page') Upload News
-        li
-          a(href='#contact') Contact
-        li.nav-right
-          a(href='/logout') Log In/Out
+  body.bg-blue-100
+    nav(class="bg-gradient-to-r from-cyan-100 to-blue-300  shadow-2xl sticky top-0")
+      div(class="mx-auto px-4")
+        div(class="flex justify-between"  )
+          div(class="flex space-x-7")
+            div
+              a(href="#" class="flex items-center py-4 px-2   ")
+                span(class="font-semibold text-red-500 text-3xl") AC
+                span(class="font-semibold text-blue-500 text-3xl") &infin;NEWS
+            div(class="hidden md:flex items-center space-x-1 text-xl")
+              a(href="/" class="py-4 px-2 text-gray-600  font-semibold hover:text-blue-500 hover:border-b-4 hover: border-blue-500 transition duration-300") Home
+              a(href="/protected_page" class="py-4 px-2 text-gray-600 font-semibold hover:text-blue-500 hover:border-b-4 hover: border-blue-500 transition duration-300") Upload News
+              a(href="" class="py-4 px-2 text-gray-600 font-semibold hover:text-blue-500 hover:border-b-4 hover: border-blue-500 transition duration-300") Contact
+              a(href="" class="py-4 px-2 text-gray-600 font-semibold hover:text-blue-500 hover:border-b-4 hover: border-blue-500 transition duration-300") Nothing
+          div(class="hidden md:flex items-center space-x-3 text-xl ")
+            a(href="/auth" class="py-2 px-2 font-medium text-gray-600 rounded hover:bg-blue-500 hover:text-white transition duration-300") Log In
+            a(href="/logout" class="py-2 px-2 font-medium text-white bg-blue-500 rounded hover:bg-blue-400 transition duration-300") Logout
+
+          div(class="md:hidden flex items-center")
+            button(class="outline-none mobile-menu-button") ###
+            svg(class=" w-6 h-6 text-gray-500 hover:text-blue-500 ")
+              x-show="!showMenu"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              path(d="M4 6h16M4 12h16M4 18h16")
+
+      div(class="hidden mobile-menu")
+        ul(class="")
+          li(class="")
+            a(href="/" class="block text-sm px-2 py-4 text-white bg-blue-500 font-semibold") Home
+          li
+            a(href="/protected_page" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300") Upload News
+          li
+            a(href="#" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300") Contact
+          li
+            a(href="/auth" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300") Log In/Sign Up
+          li
+            a(href="/logout" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300") Logout
+      script.
+        const btn = document.querySelector("button.mobile-menu-button");
+        const menu = document.querySelector(".mobile-menu");
+        btn.addEventListener("click", () => {
+        menu.classList.toggle("hidden");
+        });
+
 
   block content
