--- a/views/auth.pug
+++ b/views/auth.pug
@@ -8,6 +8,7 @@ block scripts
   script(src='../static/auth.js')
 
 block content
+  div#page.auth_page
   div(class="w-fit mt-12 pt-12  mx-auto text-2xl flex flex-row ")
     form(class="bg-red-100 shadow-md px-8  mr-8 pt-6 pb-8 mb-4 rounded-3xl bg-gradient-to-r from-cyan-200 to-blue-400" onSubmit="getLoginData(this, event);" id="exist")
       h1(class="text-center text-gray-700 font-bold") Existing User
