--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,7 +16,7 @@ head
                 span(class="font-semibold text-blue-500 text-3xl") &infin;NEWS
             div(class="hidden md:flex items-center space-x-1 text-xl")
               a(href="/" class="py-4 px-2 text-gray-600  font-semibold hover:text-blue-500 hover:border-b-4 hover: border-blue-500 transition duration-300") Home
-              a(href="/protected_page" class="py-4 px-2 text-gray-600 font-semibold hover:text-blue-500 hover:border-b-4 hover: border-blue-500 transition duration-300") Upload News
+              a(href="/protected_page" class="py-4 px-2 text-gray-600 font-semibold hover:text-blue-500 hover:border-b-4 hover: border-blue-500 transition duration-300 upload_news") Upload News
               a(href="" class="py-4 px-2 text-gray-600 font-semibold hover:text-blue-500 hover:border-b-4 hover: border-blue-500 transition duration-300") Contact
               a(href="" class="py-4 px-2 text-gray-600 font-semibold hover:text-blue-500 hover:border-b-4 hover: border-blue-500 transition duration-300") Nothing
           div(class="hidden md:flex items-center space-x-3 text-xl ")
